force-app/main/default/objects/Related_Account__c/Related_Account__c.object-meta.xml
<CustomObject>
    <label>Related Account</label>
    <nameField>
        <displayFormat>RA-{000000}</displayFormat>
        <label>Related Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>