force-app/main/default/objects/Related_Account__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comparable Organization</fullName>
            </value>
            <value>
                <fullName>Direct Competitor</fullName>
            </value>
            <value>
                <fullName>Sister Organization</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Ultimate Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>